--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 				<div class="container-fluid">
 					<a class="navbar-brand" href="#"><img src="img/logo.svg" alt="logo" width="120" height="38"></a>
 
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-						data-bs-target="#navbar-links" aria-controls="navbarSupportedContent" aria-expanded="false"
-						aria-label="Toggle navigation">
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-links"
+						aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
 
@@ -28,9 +27,11 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#">Shop</a>
 							</li>
+
 							<li class="nav-item">
 								<a class="nav-link" href="#">News</a>
 							</li>
+
 							<li class="nav-item">
 								<a class="nav-link" href="#">About us</a>
 							</li>
@@ -41,46 +42,75 @@
 		</div>
 	</header>
 
-	<div class="container-xxl">
+	<div id="app" class="container-xxl">
 		<div class="row mt-4">
-			<h2 class="text-center mb-4">Upload images</h2>
+			<h2 class="text-center mb-4">Add images to gallery</h2>
 
 			<div class="col-md-5 col-lg-4 order-md-last">
-				<form action="" class="mb-3 col-5 col-md-7">
-					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Max images">
-						<button type="submit" class="btn btn-secondary">Set</button>
+				<div class="card p-3 mb-3">
+					<div class="card p-3 mb-3" style="background-color: pink;">
+						<p>{{ message }}</p>
+
+						<p v-html="rawHtml">Here's some magic: {{ rawHtml }}</p>
+
+						<input type="text" v-model="message" placeholder="edit message">
 					</div>
-				</form>
-				<div class="progress mb-3">
-					<div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
-						aria-valuemax="100"></div>
-				</div>
 
-				<h5 class="d-flex justify-content-between align-items-center">
-					<button type="button" class="btn btn-primary" data-bs-toggle="modal"
-						data-bs-target="#add-images-modal">
-						Add images</button>
-					<span class="badge bg-primary rounded-pill">4/10</span>
-				</h5>
+					<input type="text" v-model="maxImgCountString" class="form-control mb-3 col-6 col-md-8" placeholder="Max images">
+					<p>maxImgCountString: {{ maxImgCountString }}</p>
+					<p>maxImgCount: {{ maxImgCount }}</p>
 
-				<div class="modal fade" id="add-images-modal" tabindex="-1" aria-labelledby="add-images-modal"
-					aria-hidden="true">
-					<div class="modal-dialog modal-dialog-centered">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title" id="add-images-modal">Add images</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal"
-									aria-label="Close"></button>
-							</div>
+					<div class="progress mb-3">
+						<div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
+							aria-valuemax="100"></div>
+					</div>
 
-							<div class="modal-body">
-								<p>Hello from modal body</p>
-							</div>
+					<h5 class="d-flex justify-content-between align-items-center">
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-images-modal">
+							Add images</button>
+						<span class="badge bg-primary rounded-pill">4/10</span>
+					</h5>
 
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-								<button type="button" class="btn btn-primary" disabled>Add</button>
+					<div
+						class="modal fade"
+						id="add-images-modal"
+						tabindex="-1"
+						aria-labelledby="add-images-modal"
+						aria-hidden="true"
+					>
+						<div class="modal-dialog modal-dialog-centered">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="add-images-modal">Add images</h5>
+
+									<button
+										type="button"
+										class="btn-close"
+										data-bs-dismiss="modal"
+										aria-label="Close"
+									></button>
+								</div>
+
+								<div class="modal-body">
+									<form>
+										<div class="mb-3">
+											<label for="img-url" class="form-label">URL</label>
+
+											<input type="url" class="form-control" id="img-url" placeholder="https://picsum.photos/600/400">
+										</div>
+
+										<div class="mb-3">
+											<label for="img-name" class="form-label">Name</label>
+
+											<input type="text" class="form-control" id="img-name" required>
+										</div>
+									</form>
+								</div>
+
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+									<button type="button" class="btn btn-primary">Add</button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -147,6 +177,9 @@
 	</div>
 
 	<script src="js/bootstrap.bundle.min.js"></script>
+	<!-- TODO The template syntax can be seen on the page before Vue loads. -->
+	<script src="https://unpkg.com/vue@3"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
