--- a/index.html
+++ b/index.html
@@ -57,18 +57,22 @@
 					</div>
 
 					<input type="text" v-model="maxImgCountString" class="form-control mb-3 col-6 col-md-8" placeholder="Max images">
-					<p>maxImgCountString: {{ maxImgCountString }}</p>
-					<p>maxImgCount: {{ maxImgCount }}</p>
 
 					<div class="progress mb-3">
-						<div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
-							aria-valuemax="100"></div>
+						<div
+							class="progress-bar"
+							role="progressbar"
+							:style="{width: progressWidth + '%'}"
+							aria-valuenow="40"
+							aria-valuemin="0"
+							aria-valuemax="100"
+						></div>
 					</div>
 
 					<h5 class="d-flex justify-content-between align-items-center">
 						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-images-modal">
 							Add images</button>
-						<span class="badge bg-primary rounded-pill">4/10</span>
+						<span class="badge bg-primary rounded-pill">{{ imgCount }}/{{ maxImgCount }}</span>
 					</h5>
 
 					<div
