--- a/index.html
+++ b/index.html
@@ -48,14 +48,6 @@
 
 			<div class="col-md-5 col-lg-4 order-md-last">
 				<div class="card p-3 mb-3">
-					<div class="card p-3 mb-3" style="background-color: pink;">
-						<p>{{ message }}</p>
-
-						<p v-html="rawHtml">Here's some magic: {{ rawHtml }}</p>
-
-						<input type="text" v-model="message" placeholder="edit message">
-					</div>
-
 					<input type="text" v-model="maxImgCountString" class="form-control mb-3 col-6 col-md-8" placeholder="Max images">
 
 					<div class="progress mb-3">
@@ -63,15 +55,20 @@
 							class="progress-bar"
 							role="progressbar"
 							:style="{width: progressWidth + '%'}"
-							aria-valuenow="40"
+							:aria-valuenow="progressWidth"
 							aria-valuemin="0"
 							aria-valuemax="100"
 						></div>
 					</div>
 
 					<h5 class="d-flex justify-content-between align-items-center">
-						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-images-modal">
-							Add images</button>
+						<button
+							type="button"
+							class="btn btn-primary"
+							data-bs-toggle="modal"
+							data-bs-target="#add-images-modal"
+						>Add images</button>
+						
 						<span class="badge bg-primary rounded-pill">{{ imgCount }}/{{ maxImgCount }}</span>
 					</h5>
 
@@ -100,20 +97,31 @@
 										<div class="mb-3">
 											<label for="img-url" class="form-label">URL</label>
 
-											<input type="url" class="form-control" id="img-url" placeholder="https://picsum.photos/600/400">
+											<input
+												type="url"
+												class="form-control"
+												v-model="modalImgUrl"
+												id="img-url"
+												placeholder="https://picsum.photos/600/400"
+												required>
 										</div>
 
 										<div class="mb-3">
 											<label for="img-name" class="form-label">Name</label>
 
-											<input type="text" class="form-control" id="img-name" required>
+											<input
+												type="text"
+												class="form-control"
+												v-model="modalImgName"
+												id="img-name"
+												required>
 										</div>
 									</form>
 								</div>
 
 								<div class="modal-footer">
 									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-									<button type="button" class="btn btn-primary">Add</button>
+									<button type="button" class="btn btn-primary" :disabled="isBtnAddDisabled">Add</button>
 								</div>
 							</div>
 						</div>
