--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</header>
 
 	<div id="app" class="container-xxl">
-		<div class="row mt-4">
+		<div class="row mt-4 mb-5">
 			<h2 class="text-center mb-4">Add images to gallery</h2>
 
 			<div class="col-md-5 col-lg-4 order-md-last">
@@ -68,7 +68,7 @@
 							data-bs-toggle="modal"
 							data-bs-target="#add-images-modal"
 						>Add images</button>
-						
+
 						<span class="badge bg-primary rounded-pill">{{ imgCount }}/{{ maxImgCount }}</span>
 					</h5>
 
@@ -121,7 +121,12 @@
 
 								<div class="modal-footer">
 									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-									<button type="button" class="btn btn-primary" :disabled="isBtnAddDisabled">Add</button>
+									<button
+										type="button"
+										class="btn btn-primary"
+										@click="onAddClick"
+										:disabled="isBtnAddDisabled"
+									>Add</button>
 								</div>
 							</div>
 						</div>
@@ -131,57 +136,21 @@
 
 			<div class="col-md-7 col-lg-8">
 				<div class="row row-cols-1 row-cols-lg-2 g-4">
-					<div class="col">
+					<div class="col" v-for="image in images" :key="image.uuid">
+
 						<div class="card">
-							<img src="https://picsum.photos/600/400" class="card-img-top" alt="...">
+							<img :src="image.url" class="card-img-top" :alt="`image of ${image.name}`">
+
 							<div class="card-body">
 								<h5 class="card-title d-flex justify-content-between align-items-center">
-									<span>Image name</span>
+									<span>{{ image.name }}</span>
 									<button type="button" class="btn btn-outline-danger">
 										<i class="bi bi-trash3"></i>
 									</button>
 								</h5>
 							</div>
 						</div>
-					</div>
-					<div class="col">
-						<div class="card">
-							<img src="https://picsum.photos/200/200" class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title d-flex justify-content-between align-items-center">
-									<span>Image name</span>
-									<button type="button" class="btn btn-outline-danger">
-										<i class="bi bi-trash3"></i>
-									</button>
-								</h5>
-							</div>
-						</div>
-					</div>
-					<div class="col">
-						<div class="card">
-							<img src="https://picsum.photos/600/400" class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title d-flex justify-content-between align-items-center">
-									<span>Image name</span>
-									<button type="button" class="btn btn-outline-danger">
-										<i class="bi bi-trash3"></i>
-									</button>
-								</h5>
-							</div>
-						</div>
-					</div>
-					<div class="col">
-						<div class="card">
-							<img src="https://picsum.photos/600/400" class="card-img-top" alt="...">
-							<div class="card-body">
-								<h5 class="card-title d-flex justify-content-between align-items-center">
-									<span>Image name</span>
-									<button type="button" class="btn btn-outline-danger">
-										<i class="bi bi-trash3"></i>
-									</button>
-								</h5>
-							</div>
-						</div>
+
 					</div>
 				</div>
 			</div>
