--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
 		.v-leave-to {
 			opacity: 0;
 		}
+
+		.list-enter-active,
+		.list-leave-active {
+			transition: all 0.5s ease;
+		}
+
+		.list-enter-from {
+			opacity: 0;
+			transform: translateX(-30px) rotate(-5deg);
+		}
+
+		.list-leave-to {
+			opacity: 0;
+			transform: translateX(30px) rotate(5deg);
+		}
 	</style>
 
 	<title>lab12</title>
@@ -85,7 +100,10 @@
 							data-bs-target="#add-images-modal"
 						>Add images</button>
 
-						<span class="badge bg-primary rounded-pill">{{ imgCount }}/{{ maxImgCount }}</span>
+						<span
+							class="badge rounded-pill"
+							:class="{ 'bg-primary': !isTooManyImages, 'bg-danger': isTooManyImages }"
+						>{{ imgCount }}/{{ maxImgCount }}</span>
 					</h5>
 
 					<div
@@ -159,27 +177,40 @@
 						</div>
 					</div>
 				</div>
+
+				<Transition>
+					<div class="alert alert-danger" v-if="isTooManyImages">
+						Too many images!
+					</div>
+				</Transition>
 			</div>
 
 			<div class="col-md-7 col-lg-8">
 				<div class="row row-cols-1 row-cols-lg-2 g-4">
-					<div class="col" v-for="image in images" :key="image.uuid">
 
-						<div class="card">
-							<img :src="image.url" class="card-img-top" :alt="`image of ${image.name}`">
+					<transition-group name="list">
+						<div class="col" v-for="image in images" :key="image.uuid">
 
-							<div class="card-body">
-								<h5 class="card-title d-flex justify-content-between align-items-center">
-									<span>{{ image.name }}</span>
-									
-									<button type="button" class="btn btn-outline-danger">
-										<i class="bi bi-trash3"></i>
-									</button>
-								</h5>
-							</div>
+								<div class="card">
+									<img :src="image.url" class="card-img-top" :alt="`image of '${image.name}'`">
+
+									<div class="card-body">
+										<h5 class="card-title d-flex justify-content-between align-items-center">
+											<span>{{ image.name }}</span>
+
+											<button
+												type="button"
+												class="btn btn-outline-danger"
+												@click="onDeleteImage(image.uuid)">
+
+												<i class="bi bi-trash3"></i>
+											</button>
+										</h5>
+									</div>
+								</div>								
 						</div>
+					</transition-group>
 
-					</div>
 				</div>
 			</div>
 		</div>
