--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<!-- TODO The template syntax can be seen on the page before Vue loads. -->
-	<script src="https://unpkg.com/vue@3"></script>
+	<script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 	<script src="js/index.js"></script>
 </body>
 
