less ambiguous naming

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 									<button
 										type="button"
 										class="btn btn-primary"
-										@click="onAddClick"
+										@click="onAddImage"
 										:disabled="isBtnAddDisabled"
 									>Add</button>
 								</div>
