--- a/index.html
+++ b/index.html
@@ -33,14 +33,23 @@
 			opacity: 0;
 			transform: translateX(30px) rotate(5deg);
 		}
+
+		html, body, .wrapper {
+			height: 100%;
+		}
+
+		.sticky-footer {
+			position: sticky;
+			top: 100vh;
+		}
 	</style>
 
 	<title>lab12</title>
 </head>
 
 <body>
-	<header>
-		<div class="container-xxl">
+	<div class="container-xxl wrapper">
+		<header>
 			<nav class="navbar navbar-expand-md navbar-light bg-light">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="#"><img src="img/logo.svg" alt="logo" width="120" height="38"></a>
@@ -67,154 +76,161 @@
 					</div>
 				</div>
 			</nav>
-		</div>
-	</header>
+		</header>
 
-	<div id="app" class="container-xxl">
-		<div class="row mt-4 mb-5">
-			<h2 class="text-center mb-4">Add images to gallery</h2>
+		<main id="app">
+			<div class="row py-4">
+				<h2 class="text-center mb-4">Add images to gallery</h2>
 
-			<div class="col-md-5 col-lg-4 order-md-last">
-				<div class="card p-3 mb-3">
-					<input
-						type="text"
-						v-model="maxImgCountString"
-						class="form-control mb-3 col-6 col-md-8"
-						placeholder="Max images">
+				<div class="col-md-5 col-lg-4 order-md-last">
+					<div class="card p-3 mb-3">
+						<input
+							type="text"
+							v-model="maxImgCountString"
+							class="form-control mb-3 col-6 col-md-8"
+							placeholder="Max images">
 
-					<div class="progress mb-3">
+						<div class="progress mb-3">
+							<div
+								class="progress-bar"
+								role="progressbar"
+								:style="{width: progressWidth + '%'}"
+								:aria-valuenow="progressWidth"
+								aria-valuemin="0"
+								aria-valuemax="100"
+							></div>
+						</div>
+
+						<h5 class="d-flex justify-content-between align-items-center">
+							<button
+								type="button"
+								class="btn btn-primary"
+								data-bs-toggle="modal"
+								data-bs-target="#add-images-modal"
+							>Add images</button>
+
+							<span
+								class="badge rounded-pill"
+								:class="{ 'bg-primary': !isTooManyImages, 'bg-danger': isTooManyImages }"
+							>{{ imgCount }}/{{ maxImgCount }}</span>
+						</h5>
+
 						<div
-							class="progress-bar"
-							role="progressbar"
-							:style="{width: progressWidth + '%'}"
-							:aria-valuenow="progressWidth"
-							aria-valuemin="0"
-							aria-valuemax="100"
-						></div>
-					</div>
+							class="modal fade"
+							id="add-images-modal"
+							tabindex="-1"
+							aria-labelledby="add-images-modal"
+							aria-hidden="true">
+							<div class="modal-dialog modal-dialog-centered">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="add-images-modal">Add images</h5>
 
-					<h5 class="d-flex justify-content-between align-items-center">
-						<button
-							type="button"
-							class="btn btn-primary"
-							data-bs-toggle="modal"
-							data-bs-target="#add-images-modal"
-						>Add images</button>
+										<button
+											type="button"
+											class="btn-close"
+											data-bs-dismiss="modal"
+											aria-label="Close"
+										></button>
+									</div>
 
-						<span
-							class="badge rounded-pill"
-							:class="{ 'bg-primary': !isTooManyImages, 'bg-danger': isTooManyImages }"
-						>{{ imgCount }}/{{ maxImgCount }}</span>
-					</h5>
+									<div class="modal-body">
+										<form>
+											<div class="mb-3">
+												<label for="img-url" class="form-label">URL</label>
 
-					<div
-						class="modal fade"
-						id="add-images-modal"
-						tabindex="-1"
-						aria-labelledby="add-images-modal"
-						aria-hidden="true">
-						<div class="modal-dialog modal-dialog-centered">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="add-images-modal">Add images</h5>
+												<input
+													type="url"
+													class="form-control"
+													v-model="modalImgUrl"
+													id="img-url"
+													placeholder="https://picsum.photos/600/400"
+													required>
+											</div>
 
-									<button
-										type="button"
-										class="btn-close"
-										data-bs-dismiss="modal"
-										aria-label="Close"
-									></button>
-								</div>
+											<div class="mb-3">
+												<label for="img-name" class="form-label">Name</label>
 
-								<div class="modal-body">
-									<form>
-										<div class="mb-3">
-											<label for="img-url" class="form-label">URL</label>
+												<input
+													type="text"
+													class="form-control"
+													v-model="modalImgName"
+													id="img-name"
+													required>
+											</div>
+										</form>
+									</div>
 
-											<input
-												type="url"
-												class="form-control"
-												v-model="modalImgUrl"
-												id="img-url"
-												placeholder="https://picsum.photos/600/400"
-												required>
-										</div>
+									<div class="modal-footer">
+										<Transition>
+											<div
+												class="alert alert-success py-1 me-auto"
+												v-if="showAddedSuccess"
+											>Successfully added!</div>
+										</Transition>
 
-										<div class="mb-3">
-											<label for="img-name" class="form-label">Name</label>
+										<button
+											type="button"
+											class="btn btn-secondary"
+											data-bs-dismiss="modal"
+										>Cancel</button>
 
-											<input
-												type="text"
-												class="form-control"
-												v-model="modalImgName"
-												id="img-name"
-												required>
-										</div>
-									</form>
-								</div>
-
-								<div class="modal-footer">
-									<Transition>
-										<div
-											class="alert alert-success py-1 me-auto"
-											v-if="showAddedSuccess"
-										>Successfully added!</div>
-									</Transition>
-
-									<button
-										type="button"
-										class="btn btn-secondary"
-										data-bs-dismiss="modal"
-									>Cancel</button>
-
-									<button
-										type="button"
-										class="btn btn-primary"
-										@click="onAddImage"
-										:disabled="isBtnAddDisabled"
-									>Add</button>
+										<button
+											type="button"
+											class="btn btn-primary"
+											@click="onAddImage"
+											:disabled="isBtnAddDisabled"
+										>Add</button>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 
-				<Transition>
-					<div class="alert alert-danger" v-if="isTooManyImages">
-						Too many images!
-					</div>
-				</Transition>
-			</div>
-
-			<div class="col-md-7 col-lg-8">
-				<div class="row row-cols-1 row-cols-lg-2 g-4">
-
-					<transition-group name="list">
-						<div class="col" v-for="image in images" :key="image.uuid">
-
-								<div class="card">
-									<img :src="image.url" class="card-img-top" :alt="`image of '${image.name}'`">
-
-									<div class="card-body">
-										<h5 class="card-title d-flex justify-content-between align-items-center">
-											<span>{{ image.name }}</span>
-
-											<button
-												type="button"
-												class="btn btn-outline-danger"
-												@click="onDeleteImage(image.uuid)">
-
-												<i class="bi bi-trash3"></i>
-											</button>
-										</h5>
-									</div>
-								</div>								
+					<Transition>
+						<div class="alert alert-danger" v-if="isTooManyImages">
+							Too many images!
 						</div>
-					</transition-group>
+					</Transition>
+				</div>
 
+				<div class="col-md-7 col-lg-8">
+					<div class="row row-cols-1 row-cols-lg-2 g-4">
+
+						<transition-group name="list">
+							<div class="col" v-for="image in images" :key="image.uuid">
+
+									<div class="card">
+										<img :src="image.url" class="card-img-top" :alt="`image of '${image.name}'`">
+
+										<div class="card-body">
+											<h5 class="card-title d-flex justify-content-between align-items-center">
+												<span>{{ image.name }}</span>
+
+												<button
+													type="button"
+													class="btn btn-outline-danger"
+													@click="onDeleteImage(image.uuid)">
+
+													<i class="bi bi-trash3"></i>
+												</button>
+											</h5>
+										</div>
+									</div>								
+							</div>
+						</transition-group>
+
+					</div>
 				</div>
 			</div>
-		</div>
+		</main>
+
+		<footer class="sticky-footer">
+			<div class="row bg-light py-3">
+				<span class="col-md-6 text-muted text-center fs-5">Денис Мазурак</span>
+				<span class="col-md-6 text-muted text-center fs-5">Дата создания: 1 апреля 2022</span>
+			</div>
+		</footer>
 	</div>
 
 	<!-- <script src="js/bootstrap.bundle.min.js"></script> -->
