small footer refactor

--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 		</main>
 
 		<footer class="sticky-footer">
-			<div class="row bg-light py-3">
-				<span class="col-md-6 text-muted text-center fs-5">Денис Мазурак</span>
-				<span class="col-md-6 text-muted text-center fs-5">Дата создания: 1 апреля 2022</span>
+			<div class="row py-3 bg-light text-muted text-center fs-5">
+				<div class="col-md-6">Денис Мазурак</div>
+				<div class="col-md-6">Дата создания: 1 апреля 2022</div>
 			</div>
 		</footer>
 	</div>
